[package]
name = "tempo"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base64 = "0.21.0"
env_logger = "0.10.0"
# sqlite
sqlx = { version = "0.7.0-alpha.2", features = [
  "runtime-tokio",
  "sqlite",
  "json",
  "macros",
  "time",
] }
# json de/serializer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# password encryption
ring = "0.16.20"
hex = "0.4"
# generate api token
regex = "1.7.1"
log = "0.4.17"
time = { version = "0.3.20", features = ["macros", "serde"] }

# CLI arguments
clap = { version = "4.2.1", features = ["derive"] }

rust-embed = "6.6.1"
mime_guess = "2.0.4"


[dependencies.uuid]
version = "1.2.2"
features = [
  "v4",       # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
]
